src/test/ui/borrowck/borrowck-local-borrow-with-panic-outlives-fn.ast.stderr
error[E0597]: `z.1` does not live long enough
  --> $DIR/borrowck-local-borrow-with-panic-outlives-fn.rs:6:20
   |
LL |     *x = Some(&mut z.1);
   |                    ^^^ borrowed value does not live long enough
...
LL | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
